<resources>
    <string name="app_name">Test</string>
    <string name="firstNumText">Enter first number:</string>
    <string name="inputFieldHint">enter a real number</string>
    <string name="secondNumText">Enter second number:</string>
    <string name="calculateButton">Calculate</string>
    <string name="initQuestionText">Are you a Student or a Tutor?</string>
    <string name="studentButtonText">Student</string>
    <string name="tutorButtonText">Tutor</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="debugButtonText">Debug</string>
    <string name="tutorExperience">Insert number of times you have tutored</string>
    <string name="tutorQuestionOne">Which subjects are you comfortable with teaching?</string>
    <string name="stdntQuestionOne">Choose a subject</string>
    <string name="questionOneAnsOne">Math</string>
    <string name="questionOneAnsTwo">Physics</string>
    <string name="questionOneAnsTre">STEM</string>
    <string name="questionOneAnsFor">STW</string>
    <string name="questionOneAnsFiv">Humanities</string>
    <string name="questionOneAnsSix">Spanish</string>
    <string name="questionOneAnsSvn">French</string>
    <string name="questionOneAnsAte">Computer Science</string>
    <string name="tutorQuestionTwo">How would you prefer to work with a student?</string>
    <string name="stdntQuestionTwo">How would you prefer to work with a tutor?</string>
    <string name="questionTwoAnsOne">At my home</string>
    <string name="questionTwoAnsTwo">At his/her home</string>
    <string name="questionTwoAnsTre">At a public place (school, library, etc.)</string>
    <string name="questionTwoAnsFor">Online</string>
    <string name="questionTwoAnsFiv">No preference</string>
    <string name="next">NEXT</string>
    <string name="button2Text">Start Time</string>
    <string name="buttonText">End Time</string>
    <string name="calendarCaptionText">Enter times when you are available to tutor, then tap finished when you are finished adding times.</string>
    <string name="weeklyCheckBoxText">Weekly</string>
    <string name="timeDisplayText">00:00</string>
    <string name="toTextText">to</string>
    <string name="startTimeButtonText">Start Time</string>
    <string name="endTimeButtonText">End Time</string>
    <string name="addTimeButtonText">Add Time</string>
    <string name="finishedButtonText">Finished</string>
<<<<<<< Updated upstream
    <string name="userNameText">Insert name here</string>
    <string name="personalBlurbText">Insert a personal blurb here</string>
    <string name="tutorExperienceText">Insert how many times you have previously tutored here</string>
=======
    <string name="userNameText">Insert username here (double click to clear)</string>
    <string name="personalBlurbText">Insert a personal blurb here (double click to clear)</string>
    <string name="tutorExperienceText">Insert how many times you have previously tutored here (double click to clear)</string>
>>>>>>> Stashed changes
    <string name="subjectsText">Insert teachable subjects here</string>
    <string name="whereText">Insert where you can tutor here</string>
    <string name="plugForMAMSText">https://www.massacademy.org/</string>
    <string name="personalContactInfoText">Insert phone number or email here</string>
    <string name="editButtonText">Finish</string>
    <string name="welcome">Welcome back!</string>
    <string name="studentNextTime">Your next appointment is at \n {time} on {date} with {tutor name}</string>
    <string name="studentUpcomingTimes">Upcoming appointments: \n {time} on {date} with {tutor name}\n {time} on {date} with {tutor name}</string>
    <string name="scheduleSession">Schedule a new tutoring session</string>
    <string name="cancelSession">Cancel a tutoring session</string>
    <string name="tutorSchedule">View full calendar</string>
    <string name="tutorNextTime">Your next appointment is: \n{student name} at {time} on {date} at {place}</string>
    <string name="tutorNewTimes">New appointments:\n {student name} at {time} on {date}\n {student name} at {time} on {date}</string>
    <string name="tutorUpcomingTimes">Upcoming appointments:\n {student name} at {time} on {date}\n {student name} at {time} on {date}</string>
    <string name="calendarTitle">Calendar Setup</string>
    <string name="tutorSelectionTitleText">View and Select Tutors</string>
</resources>