<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorQuestions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B5E8EC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:paddingTop="5sp" >

            <TextView
                android:id="@+id/QuestionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bg_question"
                android:gravity="center"
                android:paddingLeft="6sp"
                android:paddingTop="10sp"
                android:paddingRight="6sp"
                android:paddingBottom="10sp"
                android:text="@string/tutorQuestionOne"
                android:textColor="#062C5B"
                android:textSize="30sp"
                app:fontFamily="sans-serif-light" />

            <CheckBox
                android:id="@+id/Q1Answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsOne"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsTwo"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsTre"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsFor"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsFiv"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsSix"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsSvn"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q1Answer8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOneAnsAte"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <TextView
                android:id="@+id/QuestionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bg_question"
                android:gravity="center"
                android:paddingLeft="6sp"
                android:paddingTop="10sp"
                android:paddingRight="6sp"
                android:paddingBottom="10sp"
                android:text="@string/tutorQuestionTwo"
                android:textColor="#062C5B"
                android:textSize="30sp"
                app:fontFamily="sans-serif-light" />

            <CheckBox
                android:id="@+id/Q2Answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoAnsOne"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q2Answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoAnsTwo"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q2Answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoAnsTre"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q2Answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoAnsFor"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <CheckBox
                android:id="@+id/Q2Answer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoAnsFiv"
                android:background="@drawable/bg_answer"
                android:layout_marginTop="3dp"  />

            <Button
                android:id="@+id/tutorNextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:background="@drawable/bg_button"
                android:onClick="tutorNextButtonPress"
                android:text="@string/next"
                android:textColor="@android:color/white"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="587dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>