<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentHome">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:paddingTop="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#B5E8EC">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_bigtext"
            android:gravity="center"
            android:paddingLeft="6sp"
            android:paddingTop="10sp"
            android:paddingRight="6sp"
            android:paddingBottom="10sp"
            android:text="@string/welcome"
            android:textColor="#062C5B"
            android:textSize="36sp"
            app:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/NextApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/bg_medtext"
            android:gravity="center"
            android:paddingLeft="6sp"
            android:paddingTop="10sp"
            android:paddingRight="6sp"
            android:paddingBottom="10sp"
            android:layout_marginTop="35sp"
            android:text="@string/studentNextTime"
            android:textColor="#062C5B"
            android:textSize="24sp"
            app:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/ComingApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/bg_medtext"
            android:gravity="center"
            android:paddingLeft="6sp"
            android:paddingTop="10sp"
            android:paddingRight="6sp"
            android:paddingBottom="10sp"
            android:layout_marginTop="35sp"
            android:text="@string/studentUpcomingTimes"
            android:textColor="#062C5B"
            android:textSize="20sp"
            app:fontFamily="sans-serif-medium"  />

        <Button
            android:id="@+id/newtimebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheduleSession"
            android:background="@drawable/bg_button"
            android:layout_marginTop="35sp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelSession"
            android:background="@drawable/bg_button"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorSchedule"
            android:background="@drawable/bg_button"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>