<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitPage">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="#B5E8EC"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/initQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bigtext"
            android:gravity="center"
            android:paddingLeft="6sp"
            android:paddingTop="10sp"
            android:paddingRight="6sp"
            android:paddingBottom="10sp"
            android:text="@string/initQuestionText"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/studentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="studentButtonPress"
                android:text="@string/studentButtonText"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/tutorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="tutorButtonPress"
                android:text="@string/tutorButtonText"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <Button
            android:id="@+id/debugButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/debugButtonText"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>